--- a/RestApiModelDDDInfrastructure/RestApiModelDDDInfrastructure.csproj
+++ b/RestApiModelDDDInfrastructure/RestApiModelDDDInfrastructure.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RestApiModelDDDomain.Core\RestApiModelDDDomain.Core.csproj" />
     <ProjectReference Include="..\RestApiModelDDDomain\RestApiModelDDDomain.csproj" />
   </ItemGroup>
 
