--- a/RestApiModelDDDomain.Services/RestApiModelDDDomain.Services.csproj
+++ b/RestApiModelDDDomain.Services/RestApiModelDDDomain.Services.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RestApiModelDDDomain.Core\RestApiModelDDDomain.Core.csproj" />
+  </ItemGroup>
+
 </Project>
