--- a/RestApiModelDDDApplication/RestApiModelDDDApplication.csproj
+++ b/RestApiModelDDDApplication/RestApiModelDDDApplication.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RestApiModelDDDomain.Core\RestApiModelDDDomain.Core.csproj" />
+  </ItemGroup>
+
 </Project>
