Feat:Add dependency Injections functionalities and Sql Connection.

--- a/RestApiModelDDDAPI/appsettings.json
+++ b/RestApiModelDDDAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "SqlConnection": {
+    "SqlConnectionString":  "Servcer=Localhost;Database=Ecommerce;User Id=sa;Password=yourStrong(!)Passowrd;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
