Feat:Launch Clients and Products Controllers with its functionalities

--- a/RestApiModelDDDAPI/appsettings.json
+++ b/RestApiModelDDDAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "SqlConnection": {
-    "SqlConnectionString":  "Servcer=Localhost;Database=Ecommerce;User Id=sa;Password=yourStrong(!)Passowrd;"
+    "SqlConnectionString":  "Servcer=Localhost;Database=Ecommerce;User Id=sa;Password=Strong(!)Password;"
   },
   "Logging": {
     "LogLevel": {
